# ChangeLog for app-admin/emacs-updater
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/emacs-updater/ChangeLog,v 1.16 2009/03/22 19:05:20 ulm Exp $

  22 Mar 2009; Ulrich Mueller <ulm@gentoo.org> -emacs-updater-1.0.ebuild:
  Remove old.

  22 Mar 2009; Jeremy Olexa <darkside@gentoo.org> emacs-updater-1.3.ebuild:
  amd64 stable, bug 259326

  11 Mar 2009; Brent Baude <ranger@gentoo.org> emacs-updater-1.3.ebuild:
  stable ppc64, bug 259326

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> emacs-updater-1.3.ebuild:
  Stable for HPPA (bug #259326).

  19 Feb 2009; nixnut <nixnut@gentoo.org> emacs-updater-1.3.ebuild:
  ppc stable #259326

  17 Feb 2009; Raúl Porcel <armin76@gentoo.org> emacs-updater-1.3.ebuild:
  alpha/arm/ia64/s390/sh/x86 stable wrt #259326

  17 Feb 2009; Ferris McCormick <fmccor@gentoo.org>
  emacs-updater-1.3.ebuild:
  Sparc stable, Bug #259326.

*emacs-updater-1.3 (18 Jan 2009)

  18 Jan 2009; Ulrich Mueller <ulm@gentoo.org> -emacs-updater-1.2.ebuild,
  +emacs-updater-1.3.ebuild:
  Version bump. Remove intermediate version.

*emacs-updater-1.2 (30 Dec 2008)

  30 Dec 2008; Ulrich Mueller <ulm@gentoo.org> -emacs-updater-1.1.ebuild,
  +emacs-updater-1.2.ebuild:
  Version bump. Remove intermediate version.

*emacs-updater-1.1 (04 Nov 2008)

  04 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-updater-1.1.ebuild:
  Version bump: new --exact option; respect TMPDIR; man page added.

  30 Sep 2008; Jeroen Roovers <jer@gentoo.org> emacs-updater-1.0.ebuild:
  Stable for HPPA (bug #238021).

  20 Sep 2008; Raúl Porcel <armin76@gentoo.org> emacs-updater-1.0.ebuild:
  alpha/ia64 stable wrt #238021

  19 Sep 2008; Brent Baude <ranger@gentoo.org> emacs-updater-1.0.ebuild:
  Marking emacs-updater-1.0 ppc64 and ppc for bug 238021

  18 Sep 2008; Markus Meier <maekke@gentoo.org> emacs-updater-1.0.ebuild:
  amd64/x86 stable, bug #238021

  18 Sep 2008; Ferris McCormick <fmccor@gentoo.org>