@@ -1,4 +1,6 @@
 DIST emacs-updater-1.3.tar.bz2 4884 RMD160 e4040d9d71281f53709b303d4c7afcfe2936c0ea SHA1 e4869207bf52b4821f321813e18522704dd05bfc SHA256 56287f2cc0ca673d0bb09401e4eefcf20eeeabe24ea99e2d0465cfa1d44b40ed
+DIST emacs-updater-1.4.tar.bz2 5248 RMD160 0f12cbd822aa3bfad5d414964b75b338ebf10a52 SHA1 7450088b3f661c6b2eef58be5f7a213f9e847350 SHA256 005f477665ebb0b94a55da211c3344d4b00acc4dd25d7d17b7effd94900f0f1a
 EBUILD emacs-updater-1.3.ebuild 843 RMD160 00c8bbbf5d4db743fa49e997af8be5d08f6ddf4b SHA1 721b8e70a213184eb499803fc31f6858d0882b93 SHA256 5d20b3c328b1744aab984fe635ee6e11994d495c6377f41a737efc9e875b6908
-MISC ChangeLog 2279 RMD160 e1f663c07aa5a208397ed80fef65f58e9e5f5ecb SHA1 e2e81ec3e48f7a523c842c91a36e0f5b7bc849d1 SHA256 fcb917dcb9ae8476e860c41edd2c9a09893a91b8684eed97fdac842c3b0bb0ab
+EBUILD emacs-updater-1.4.ebuild 838 RMD160 8869d6e981d29df673922eb7f7557c72f95f55e0 SHA1 8828c9a75f8bfd91a9b1294d51c1782802c3faaf SHA256 204bc53873a1053a09abaa9e7b30632add3b00b5b5c37332061ffea61f1b58f7
+MISC ChangeLog 2404 RMD160 dbabb9f9ee90921f3db2bb1d5da3027d9ffa0b0e SHA1 7e5c46808a1ae544eead96770fdce51b59836284 SHA256 0af24079c203f41561f52fb1deeaaef2e389f3ff6413306b9d0361613ac634a7
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
